<resources>
    <string name="app_name">Métodos Numéricos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_credits">Creditos</string>
    <string name="nombre_proyecto">Proyecto de métodos numéricos</string>
    <string name="nombreYo">Andres</string>
    <string name="nombreNaka">Santiago</string>
    <string name="Metodo1Yo">Gauss</string>
    <string name="metodo2Yo">Gauss-Seidel</string>
    <string name="metodo3Yo">Polinomios de Interpolación</string>
    <string name="metodo1Naka">Cramer</string>
    <string name="metodo2Naka">Bisección</string>
    <string name="metodo3Naka">Bairstow</string>
    <string name="by1">Andrés de Lago Gómez</string>
    <string name="by2">Santiago Nakakawa Bernal</string>
    <string name="alto">Alto</string>
    <string name="ancho">Ancho</string>
    <string name="inicio">Inicio</string>
    <string name="starting_height">2</string>
    <string name="starting_width">2</string>
    <string name="by">By:</string>
    <string name="resultado">Resultado:</string>
    <string name="cantidad_de_puntos">Cantidad de puntos:</string>
    <string name="aceptar">Aceptar</string>
    <string name="obtener_resultado">Obtener Resultado</string>
</resources>
