<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/cantidad_puntos"
        android:text="@string/cantidad_de_puntos"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/cantidad_puntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:minWidth="100dp"
            android:text="0" />

        <Button
            android:id="@+id/button_ok_polys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/polys_points_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" />

    </ScrollView>

    <Button
        android:id="@+id/button_run_polys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/obtener_resultado" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:text="@string/resultado"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="5">

        <TextView
            android:id="@+id/interpolation_result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>


</LinearLayout>